fix logo alignment

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -45,6 +45,10 @@ a.md-footer__link:hover {color: #eeeeee; text-decoration: none;}
     background-size: 10px auto;
 }
 
+a.md-header__button.md-logo::after {
+    display: none;
+}
+
 li.md-nav__item--active > nav:nth-child(3) > ul:nth-child(2) > li > a:nth-child(1)::after {
     content: '>';
     font-weight: bold;
